samples/_failures_safe/1761092110_2aa6f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0a59da5.c: In function ‘main’:
./samples/SAFE/__tmp_b0a59da5.c:161:12: error: missing terminating " character
  161 |     printf("
      |            ^
./samples/SAFE/__tmp_b0a59da5.c:161:5: error: expected expression at end of input
  161 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_b0a59da5.c:161:5: error: expected declaration or statement at end of input
